client/src/components/Navigation/nav.css
.brandName{
    font-size: 3rem !important;

}

.navbar-dark .navbar-brand {
    color: var(--alice);
}

.navbar-dark .navbar-brand:hover {
    color: var(--alice);
    text-shadow: 0 0 2rem var(--alice);
    transform: scale(1.03);
}

.navLink{
    padding:1.5rem 2rem;
    text-decoration: none;
    color: var(--alice);
    cursor: pointer;
}
.navLink:hover{
    color: var(--alice);
    text-shadow: 0 0 1rem var(--alice);
    transform: scale(1.03);
}

.navigation{
    background-color: var(--royal);
    border-bottom: 4px solid var(--orange);
}
.navCheckout{
    position: relative;
}
.cartCount{
    position:absolute;
    bottom:1rem;
    right:1rem;
    font-size: 0.8rem;
    background-color: rgb(7, 56, 125);
    border-radius: 50%;
    padding:0 0.4rem;
}
.logo{
    width:4rem;
    margin:0 1rem 0;
}
@media screen and (max-width: 992px) {
    .navLink{
        padding-right:0 !important;
    }
    .menuContainer{
        display: flex;
        flex-direction: column;
        position: absolute;
    top: 0;
    right: 0;
    background-color: var(--royal);
    z-index: 1;
    padding: 0.5rem 2rem 0.5rem;
    border-radius: 0.5rem;
    }
    .menuButton{
        margin-left:auto;
    }
    .menuButton button{
        margin:0.9rem 0;
    }
    .logoContainer{
        margin-bottom:auto;
    }
}

@media screen and (max-width:625px) {
    
    .brandName{
        font-size: 2rem !important;
    }
}
@media screen and (max-width:475px) {
    
    .brandName{
        font-size:x-large !important;
    }
}

@media screen and (max-width:398px) {

    .brandName{
        font-size:larger !important;
    }
    
    .navigation{
        /* width: 105%; */
    }


}


@media screen and (max-width:382px) {

    .brandName{
        font-size:larger !important;
    }
    
    .navigation{
        /* width: 100vw; */
    }


}

